--- a/akka-playground/.classpath
+++ b/akka-playground/.classpath
@@ -4,7 +4,7 @@
   <classpathentry output="target/scala-2.9.1/test-classes" path="src/test/scala" kind="src"></classpathentry>
   <classpathentry output="target/scala-2.9.1/test-classes" path="src/test/java" kind="src"></classpathentry>
   <classpathentry path="org.scala-ide.sdt.launching.SCALA_CONTAINER" kind="con"></classpathentry>
-  <classpathentry path="/Users/SanderMak/.ivy2/cache/com.typesafe.akka/akka-actor/jars/akka-actor-2.0.jar" kind="lib"></classpathentry>
+  <classpathentry kind="lib" path="/Users/SanderMak/.ivy2/cache/com.typesafe.akka/akka-actor/jars/akka-actor-2.0.jar" sourcepath="/Users/SanderMak/.ivy2/cache/com.typesafe.akka/akka-actor/srcs/akka-actor-2.0-sources.jar"></classpathentry>
   <classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"></classpathentry>
   <classpathentry path="bin" kind="output"></classpathentry>
 </classpath>
