Adding future example

--- a/akka-playground/.project
+++ b/akka-playground/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>My Project</name>
+  <name>Akka demo's</name>
   <buildSpec>
     <buildCommand>
       <name>org.scala-ide.sdt.core.scalabuilder</name>
